finished first round of media query

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,12 @@ a:link {
   text-decoration: none;
 }
 
+
+@media (max-width: 425px) {
+  .App {
+    align-items: center;
+  }
+  main {
+    margin: auto;
+  }  
+}
